Fixes left align in feature images and core concepts on small screens
- download button text
- wiki link

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 }
 
 .default-bg.green {
-	background-color: rgba(0, 255, 0, 0.23)
+	background-color: rgba(68, 157, 68, 0.55);
 }
 
 .translucent-bg {
@@ -883,9 +883,9 @@ textarea {
 	}
 	.banner {
 
-    min-height: 620px;
+		min-height: 620px;
 
-}
+	}
 	.container .space {
 		padding: 6px 0;
 	}
@@ -917,4 +917,18 @@ textarea {
 	.text .type-time {
     	font-size: 9px;
 	}
+}
+@media (max-width: 990px) {
+	.img-wallet-left {
+    	display: inherit;
+	}
+}
+@media (max-width: 768px) {
+	.core-res-left {
+    	text-align: left;
+	}
+	.space-res {
+    	padding: 20px 0;
+	}
+
 }
